# console

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: pipeline.yml
assets/: logo.ai
assets/boot/: logo-dynamic-boot.mov
design/console/: console.kicad_pcb  console.kicad_prl  console.kicad_pro  console.kicad_sch  fp-info-cache
design/console/Gerber/: console-B_Cu.gbr  console-B_Mask.gbr  console-B_Paste.gbr  console-B_Silkscreen.gbr  console-Edge_Cuts.gbr  console-F_Cu.gbr  console-F_Mask.gbr  console-F_Paste.gbr  console-F_Silkscreen.gbr  console-NPTH.drl  console-PTH.drl  console-job.gbrjob
docs/: CompilingMonoPi.md
src/: animator.rs  engine.rs  env.rs  game.rs  gamestick.rs  gpio.rs  lib.rs  main.rs  os.rs
testenv/: README.md
testenv/GAMESTICK/: Dodge The Creeps.pck  Pong.pck  fsm.pck  fsm2.pck  game  gd-paint.pck  platformer.pck
