[package]
name = "goco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
rpi = ["dep:rppal"]

[dependencies]
iced = { version = "0.7", features = ["image", "debug", "smol"] } 
dirs = "4.0"
glob = "0.3"
rppal = { version = "0.14.1", optional = true }